# Bit-Pirate-Python

./: README.md  pyproject.toml
.github/: publish.yml
.github/workflows/: publish.yml
src/bitpirate/: __init__.py  bit_pirate.py  bit_pirate_wifi.py
src/bitpirate/bpio2/: __init__.py  base.py  client.py  gpio.py  i2c.py  spi.py
