[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-pirate"
version = "0.1.0"
description = "Python clients for ESP32 Bit Pirate over USB serial, Wi-Fi, and BPIO2"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Geo Frey" }
]
keywords = [
    "esp32",
    "hardware-hacking",
    "serial",
    "i2c",
    "spi",
    "uart",
    "bpio2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyserial>=3.5",
    "websocket-client>=1.8",
    "cobs>=1.2",
    "flatbuffers>=24.3",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=6",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/geo-tp/ESP32-Bit-Pirate"
Repository = "https://github.com/geo-tp/Bit-Pirate-Python"
Issues = "https://github.com/geo-tp/Bit-Pirate-Python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bitpirate*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
